@@ -14,6 +14,8 @@ echo 'op_to_source usage: op_to_source [option]
   -s --source-with-assembly        mix asm with source file (imply --assembly)
   -c --sort-by-counter counter_nr  sort the output by decreasing samples nr on
 				   counter_nr
+  --source-dir			   base name of the source directory
+  --output-dir			   base name of the output directory
   -w --with-more-than-samples      show all source files if it contains more
 				   than percent samples (0-100 allowed)
   -u --until-more-than-samples     show all source files until the threshold
@@ -69,6 +71,14 @@ do
 		-h|--help)
 			do_help
 			exit 0
+			;;
+		--source-dir)
+			shift
+			op_filter_option="$op_filter_option --source-dir $1"
+			;;
+		--output-dir)
+			shift
+			op_filter_option="$op_filter_option --output-dir $1"
 			;;
 		-w|--with-more-than-samples)
 			shift
